--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -25,6 +25,6 @@
   @media (max-width: 600px) {
     padding-right: 0rem;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 70px;
   }
 }
