--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -29,6 +29,16 @@
   h2 {
     font-size: 1.75rem;
     margin-bottom: 0.875rem;
+
+    @media (max-width: 1275px) {
+      font-size: 1.6rem;
+    }
+    @media (max-width: 1180px) {
+      font-size: 1.3rem;
+    }
+    @media (max-width: 1100px) {
+      font-size: 1.3rem;
+    }
   }
 
   .btn {
@@ -152,12 +162,15 @@
     }
   }
 
+  @media (max-height: 750px) and (min-width: 992px) {
+    padding-top: 1rem;
+    .card-wrapper {
+      margin-top: 1.5rem;
+    }
+  }
+
   @media (max-width: 600px) {
     padding: 5rem 1.2rem;
-
-    h2 {
-      font-size: 1.3rem;
-    }
 
     .card-wrapper {
       .card {
